# c---algorithm

./: .clangd  .gitignore  CMakeLists.txt  Task List Management.cpp  Task List Management.vcxproj  Task List Management.vcxproj.filters  berat_ideal.cpp  convert_dog_age.cpp  currency.cpp  pajak_makanan.cpp  pengelolaan_daftar_tugas.cpp  quadratic_formula.cpp  random_fortune.cpp  run_db.sh  tugas.txt
Dating profile/: app.cpp  profile.cpp  profile.h
Pengelolaan daftar tugas/: pengelolaan_daftar_tugas.cpp  task_list.cpp  tugas.txt
Project/: Project.sln  Project.vcxproj  login.h  main.cpp  pengelolaan_daftar_tugas.cpp  source.cpp
Project/Project/: .clangd  CMakeLists.txt  a  compile_dbg.sh  credentials.cpp  credentials.h  login.h  main  main.cpp  processes.cpp  processes.h  run_db.sh  source.cpp  source_data.cpp  source_data.h  source_login.cpp  tugas.txt
Project/Project/Release/: CMakeLists.txt
Project/Project/doc/: fitur_deadline.txt  tugas.txt
Project/Project/headers/: credentials.h  processes.h
Project/Project/src/: .clang-format  credentials.cpp  main.cpp  processes.cpp
Project/Project/src/headers/: connection.hpp
Project/x64/Debug/: Project.exe.recipe
Project/x64/Debug/Project.tlog/: Project.lastbuildstate
debug/: CMakeLists.txt
latihan&tugas c++/: C_to_F.cpp  belajar.cpp  big_S.cpp  data_mahasiswa.cpp  latihan1.cpp  latihan2.cpp  sorting-hat.cpp
libs/: processes.hpp
src/: credentials.cpp  main.cpp  processes.cpp
